[gd_scene load_steps=12 format=2]

[ext_resource path="res://GI game jam Fall 2022/UIs/exit button.png" type="Texture" id=1]
[ext_resource path="res://GI game jam Fall 2022/UIs/play button selected.png" type="Texture" id=2]
[ext_resource path="res://GI game jam Fall 2022/UIs/play button.png" type="Texture" id=3]
[ext_resource path="res://GI game jam Fall 2022/UIs/exit button selected.png" type="Texture" id=4]
[ext_resource path="res://GI game jam Fall 2022/game title 2.png" type="Texture" id=6]
[ext_resource path="res://UI/PlayButtonSprite.gd" type="Script" id=7]
[ext_resource path="res://UI/ExitButtonSprite.gd" type="Script" id=8]
[ext_resource path="res://GI game jam Fall 2022/background 2.png" type="Texture" id=9]
[ext_resource path="res://UI/Main Menu.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "hover",
"speed": 5.0
} ]

[node name="Main Menu" type="Node"]
script = ExtResource( 10 )

[node name="Play" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 62.0
margin_top = -198.0
margin_right = 259.0
margin_bottom = -71.0
__meta__ = {
"_edit_group_": true
}

[node name="PlayButtonSprite" type="AnimatedSprite" parent="Play"]
position = Vector2( 101, 60 )
scale = Vector2( 0.954259, 0.948598 )
z_index = 1
frames = SubResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Exit" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -271.0
margin_top = -190.0
margin_right = -65.0
margin_bottom = -71.0
action_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="ExitButtonSprite" type="AnimatedSprite" parent="Exit"]
position = Vector2( 106, 47 )
scale = Vector2( 0.785623, 0.884454 )
z_index = 1
frames = SubResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = 59.0
margin_right = 1976.0
margin_bottom = 1759.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[connection signal="focus_entered" from="Play" to="Play/PlayButtonSprite" method="_on_Play_focus_entered"]
[connection signal="focus_exited" from="Play" to="Play/PlayButtonSprite" method="_on_Play_focus_exited"]
[connection signal="mouse_entered" from="Play" to="Play/PlayButtonSprite" method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="Play/PlayButtonSprite" method="_on_Play_mouse_exited"]
[connection signal="focus_entered" from="Exit" to="Exit/ExitButtonSprite" method="_on_Exit_focus_entered"]
[connection signal="focus_exited" from="Exit" to="Exit/ExitButtonSprite" method="_on_Exit_focus_exited"]
[connection signal="mouse_entered" from="Exit" to="Exit/ExitButtonSprite" method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="Exit/ExitButtonSprite" method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
